--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "hooks": {
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
-  }
+  },
+  "workspaces": [
+    "packages/*"
+  ]
 }
