--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@mo-demo/cli-shared-utils": "^0.0.1",
-    "chalk": "^5.0.0"
+    "chalk": "^5.0.0",
+    "lodash": "^4.17.21"
   }
 }
